@@ -9,7 +9,7 @@ ENABLE_DOUBLECLICKEDIT = false
 ENABLE_XHTML_XML = false
 ENABLE_OPEN_GRAPH = false
 USECACHE = true
-READONLY = false
+ISREADONLY = false
 
 ; calculated dynamically, but need a default
 WIKIDB_NOCACHE_MARKUP = false
