@@ -166,7 +166,7 @@
 ; Enable this for system maintainance (e.g. read-only mount) or a general
 ; read-only database.
 ; Default: false
-;READONLY = true
+;ISREADONLY = true
 
 ;==========================================================================
 ; Part One: Authentication and security settings.
